[package]
name = "spb_rs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Sparkplug-B client library"
repository = "https://github.com/lach-g/spb_rs"
keywords = ["IoT", "Sparkplug-B", "MQTT", "Tahu", "messaging"]
authors = ["Lachlan Greenland <lachlan.greenland@gmail.com>"]

[build-dependencies]
protobuf-codegen = "3.5.0"

[dependencies]
anyhow = "1.0.86"
paho-mqtt = { version = "0.12.5", features = ["default"] }
protobuf = "3.5.0"

[dev-dependencies]
testcontainers = "0.21.1"
tokio = { version = "1.39.3", features = ["macros"] }
